Escena con skybox arreglado y listo para la entrega

--- a/Proyecto_1/Proyecto_1.vcxproj
+++ b/Proyecto_1/Proyecto_1.vcxproj
@@ -84,9 +84,12 @@
     <None Include="Assets\JSON\lights.json" />
     <None Include="Assets\shaders\basic.vert" />
     <None Include="Assets\shaders\cook.frag" />
+    <None Include="Assets\shaders\cubeMapping.frag" />
     <None Include="Assets\shaders\Normal Mapping.frag" />
+    <None Include="Assets\shaders\parallaxMapping.frag" />
     <None Include="Assets\shaders\select.frag" />
     <None Include="Assets\shaders\silhouette.frag" />
+    <None Include="Assets\shaders\skybox.frag" />
     <None Include="Assets\shaders\toon.frag" />
   </ItemGroup>
   <ItemGroup>
